# UnemployedDA-blog

./: .env_example  .gitignore  404.html  README.md  auto_deploy.sh  debug.py  docker-compose.yml  docker-entrypoint.sh  dockerfile  gen_admin.py  pyproject.toml  requirements.txt  unemployedda.db
alembic/: env.py
alembic/versions/: 4abff9c01dd6_init.py  8314fd2cc0e7_add_user_table.py  da2815da67a2_add_article_table.py
src/: database.py  debug.py  dependency.py  main.py  middleware.py
src/article/: crud.py  models.py  router.py  schemas.py
src/backend/: dependency.py  main.py
src/controllers/: article.py  user.py
src/core/auth/: oauth.py  token.py
src/core/config/: constants.py
src/core/database/: session.py
src/core/fastapi/templates/: html.py
src/frontend/: styles.css
src/models/: article.py  user.py
src/routes/: article.py  index.py  user.py
src/schemas/extras/: article.py  token.py  user.py
src/schemas/requests/: article.py  user.py
src/schemas/responses/: article.py
src/security/: crud.py  models.py  schemas.py  security.py
src/static/: article.html  index.html
src/static/css/: styles.css
src/static/js/: form.js  script.js
src/templates/: article.html  index.html  styles.css
src/views/: 404.html  article.html  index.html
src/views/css/: styles.css
src/views/js/: script.js
test/: locustfile.py
