[tool.poetry]
name = "unemployedda-blog"
version = "0.1.0"
description = ""
authors = ["Khoa Nguyen Dang  <ndkhoa0704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
psycopg = "^3.1.19"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
psycopg-binary = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
